# cryptographic-algorithms

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: bench_aes.c
examples/: example_aes.c
scripts/: plot_results.py  run_benchmarks.sh
src/asymmetric/: rsa.c  rsa.h
src/hash/: phf.h  phf_api.cpp  phf_bdz.c  phf_bdz.cpp  phf_chd.c  phf_chd.cpp  phf_elias_fano.cpp  phf_hash.cpp  phf_rank_select.c  phf_rank_select.cpp
src/symmetric/: aes.c  aes.h
tests/: test_aes.cpp  test_phf.cpp  test_rsa.cpp
utils/: utils.c  utils.h
